# row-bot

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASE_NOTES.md  Start Row-Bot.command  agent.py  api_keys.py  app.py  app_port.py  brand.py  build_linux_app.sh  data_paths.py  document_extraction.py  documents.py  dream_cycle.py  embedding_config.py  embedding_providers.py  github_account.py  identity.py  insights.py  knowledge_graph.py  launcher.py  logging_config.py  memory.py  memory_evolution.py  memory_extraction.py  memory_policy.py  models.py  osv-scanner.toml  prompts.py  pyproject.toml  pytest.ini  requirements.txt  secret_store.py  (+31 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
buddy/: assets.py  brain.py  config.py  hatch.py
channels/: approval.py  auth_store.py  commands.py  config.py  discord_channel.py  media.py  runtime.py  slack.py  sms.py  telegram.py  tool_factory.py  whatsapp.py
designer/: ai_content.py  brand.py  brand_dialog.py  briefing.py  canvas_resize.py  editor.py  export.py  fonts.py  hotspot_recorder.py  interaction.py  page_navigator.py  presentation.py  preview.py  prompt.py  publish.py  state.py  storage.py  template_gallery.py  templates.py  tool.py  ui_theme.py
developer/: agent_context.py  github.py  inspector_snapshot.py  runtime.py  sandbox.py  sandbox_runtime.py  state.py  storage.py  tool_capsules.py  ui.py
docs/: 404.html  ARCHITECTURE.md  BRANCHING.md  CNAME  COMPUTER_USE_SECURITY.md  INSTALLER_CI_VERIFICATION_PLAN.md  PLUGIN_SYSTEM_V2.md  PROMPT_CONTEXT_AND_CACHE.md  RELEASING.md  SOURCE_LAYOUT.md  agent-mode-provider-overhaul-implementation-plan.md  architecture.html  chat-only-runtime-implementation-plan.md  contact.html  features.html  index.html  llms-full.txt  llms.txt  local-provider-overhaul-plan.md  memory-recall-uplift-implementation-plan.md  site.css  site.js  sitemap.xml
docs-content/: MAINTENANCE.md  review-status.md
docs-site/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
installer/: README.md  build_installer.ps1  build_linux_app.sh  build_mac_app.sh  build_mac_release.sh  install-linux.sh  install_deps.bat  launch_row_bot.bat  launch_row_bot.vbs  row_bot_setup.iss  thoth_setup.iss
mcp_client/: __init__.py  config.py  conflicts.py  marketplace.py  recommended_servers.json  requirements.py  results.py  runtime.py
migration/: __init__.py  apply.py  core.py  detection.py  planner.py  row_bot_legacy_rebrand.py
plugins/: api.py  installer.py  loader.py  marketplace.py  state.py
providers/: __init__.py  auth_store.py  capabilities.py  catalog.py  codex.py  config.py  custom.py  external_credentials.py  media.py  model_catalog.py  model_catalog_cache.py  models.py  ollama.py  opencode.py  readiness.py  resolution.py  routing.py  runtime.py  selection.py  status.py
scripts/: app_payload_manifest.py  append_sha_manifest.py  check_linux_native_baseline.py  coverage_summary.py  cut_release.py  dummy_openai_endpoint.py  export_locked_requirements.py  mcp_real_world_e2e.py  reasoning_completion_harness.py  run_test_matrix.py  skills_hub_live_import_matrix.py  smoke_app.py  ui_performance_harness.py  verify_runtime_dependencies.py
skills_hub/: github_source.py  input_detection.py  installer.py  lobehub_source.py  provenance.py  scanner.py  search_index.py  well_known_source.py
tests/: README.md  __init__.py  conftest.py  integration_tests.py  source_layout_compat.py  test_active_run_queue.py  test_agent_approvals.py  test_agent_commands.py  test_agent_context.py  test_agent_profiles.py  test_agent_readiness.py  test_agent_runner.py  test_agent_runs.py  test_agent_runtime_profiles.py  test_agent_tool.py  test_agent_tool_catalog.py  test_agent_tool_filtering.py  test_agent_ui_contracts.py  test_agent_write_locks.py  test_api_key_storage.py  test_app_port.py  test_app_stability_hardening.py  test_approval_messages.py  test_approval_policy.py  test_atlascloud_first_class_provider.py  test_auto_title_guard.py  test_brand_constants.py  test_browser_cancellation.py  test_buddy_core.py  test_buddy_ui.py  test_cancellable_http_client.py  test_channel_auth_store.py  test_channel_goal_runtime.py  test_channel_skill_commands.py  test_channel_streaming.py  test_channel_workflow_model_routing.py  test_chat_attachment_filesystem_bridge.py  test_chat_keybindings.py  test_chat_only_runtime.py  test_chat_tool_trace_ui.py  (+118 more)
tools/: __init__.py  approval_gate.py  browser_tool.py  calendar_tool.py  (+17 more)
(+1077 files in other folders)
