[build-system]
requires = [
  "setuptools>=80,<81",
  "wheel>=0.45,<0.46",
]
build-backend = "setuptools.build_meta"

[project]
name = "row-bot"
dynamic = ["version"]
description = "Local-first personal AI assistant."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { file = "LICENSE" }
authors = [
  { name = "Row-Bot" },
]
dependencies = [
  "nicegui>=2.21,<4.0",
  "fastapi>=0.115,<1.0",
  "starlette>=1.3.1,<1.4",
  "ollama>=0.5,<1.0",
  "langchain>=1.0,<2.0",
  "langchain-core>=1.0,<2.0",
  "langchain-classic>=1.0,<2.0",
  "langchain-community>=0.4,<0.5",
  "langchain-google-community[gmail]>=2.0,<4.0",
  "langchain-ollama>=1.0,<2.0",
  "langchain-anthropic>=1.0,<2.0",
  "langchain-google-genai>=2.1,<4.0",
  "langchain-openai>=1.3.3,<2.0",
  "langchain-openrouter>=0.2,<0.3",
  "langchain-xai>=0.2,<2.0",
  "langchain-text-splitters>=1.0,<2.0",
  "langgraph>=1.0,<2.0",
  "langgraph-checkpoint-sqlite>=2.0,<4.0",
  "tiktoken>=0.9,<1.0",
  "openai>=2.0,<3.0",
  "anthropic>=0.69,<2.0",
  "google-genai>=1.30,<2.0",
  "tavily-python>=0.7,<1.0",
  "wikipedia>=1.4,<2.0",
  "arxiv>=2.4,<3.0",
  "duckduckgo-search>=8.1,<9.0",
  "ddgs>=9.0,<10.0",
  "networkx>=3.4,<4.0",
  "simpleeval>=1.0,<2.0",
  "apscheduler>=3.11,<4.0",
  "plyer>=2.1,<3.0",
  "numpy>=1.26,<2.3",
  "requests>=2.32,<3.0",
  "httpx>=0.28,<1.0",
  "pydantic>=2.10,<3.0",
  "pyyaml>=6.0,<7.0",
  "beautifulsoup4>=4.13,<5.0",
  "keyring>=24.0,<26.0",
  "wolframalpha>=5.1,<6.0",
  "psutil>=6.0,<8.0",
  "pystray>=0.19,<1.0",
  "pyobjc-core>=12.2,<13.0; sys_platform == 'darwin'",
  "pyobjc-framework-Cocoa>=12.2,<13.0; sys_platform == 'darwin'",
  "Pillow>=11.0,<13.0",
  "qrcode>=8.0,<9.0",
  "pyjwt[crypto]>=2.8,<3.0",
  "pywebview>=5.4,<6.0",
]

[project.optional-dependencies]
voice = [
  "sounddevice>=0.5,<1.0",
  "faster-whisper>=1.1,<2.0",
  "kokoro-onnx>=0.4,<1.0",
]
designer = [
  "fpdf2>=2.8,<3.0",
  "python-pptx>=1.0,<2.0",
  "python-docx>=1.1,<2.0",
  "pandas>=2.2,<3.0",
  "plotly>=6.0,<7.0",
  "kaleido>=1.0,<2.0",
  "playwright>=1.50,<2.0",
]
browser = [
  "playwright>=1.50,<2.0",
]
channels = [
  "python-telegram-bot>=22.0,<23.0",
  "slack-bolt>=1.28,<2.0",
  "twilio>=9.0,<10.0",
  "discord.py>=2.7,<3.0",
  "pyngrok>=7.0,<8.0",
]
mcp = [
  "mcp>=1.20,<2.0",
  "langchain-mcp-adapters>=0.1,<1.0",
]
developer = [
  "pywinpty>=2.0,<3.0; sys_platform == 'win32'",
]
local-embeddings = [
  "faiss-cpu>=1.12,<2.0",
  "sentence-transformers>=5.1,<6.0",
  "huggingface-hub>=0.35,<1.0",
  "transformers>=4.56,<5.0",
  "tokenizers>=0.22,<1.0",
  "einops>=0.8,<1.0",
  "torch>=2.7,<3.0",
  "langchain-huggingface>=1.0,<2.0",
]
media = [
  "opencv-python>=4.10,<5.0",
  "mss>=9.0,<11.0",
  "youtube-search>=2.1,<3.0",
  "youtube-transcript-api>=1.2,<2.0",
  "pypdf>=6.0,<7.0",
  "pandas>=2.2,<3.0",
  "openpyxl>=3.1,<4.0",
  "xlrd>=2.0,<3.0",
  "plotly>=6.0,<7.0",
  "kaleido>=1.0,<2.0",
]
all = [
  "sounddevice>=0.5,<1.0",
  "faster-whisper>=1.1,<2.0",
  "kokoro-onnx>=0.4,<1.0",
  "fpdf2>=2.8,<3.0",
  "python-pptx>=1.0,<2.0",
  "python-docx>=1.1,<2.0",
  "pandas>=2.2,<3.0",
  "plotly>=6.0,<7.0",
  "kaleido>=1.0,<2.0",
  "playwright>=1.50,<2.0",
  "python-telegram-bot>=22.0,<23.0",
  "slack-bolt>=1.28,<2.0",
  "twilio>=9.0,<10.0",
  "discord.py>=2.7,<3.0",
  "pyngrok>=7.0,<8.0",
  "mcp>=1.20,<2.0",
  "langchain-mcp-adapters>=0.1,<1.0",
  "pywinpty>=2.0,<3.0; sys_platform == 'win32'",
  "faiss-cpu>=1.12,<2.0",
  "sentence-transformers>=5.1,<6.0",
  "huggingface-hub>=0.35,<1.0",
  "transformers>=4.56,<5.0",
  "tokenizers>=0.22,<1.0",
  "einops>=0.8,<1.0",
  "torch>=2.7,<3.0",
  "langchain-huggingface>=1.0,<2.0",
  "opencv-python>=4.10,<5.0",
  "mss>=9.0,<11.0",
  "youtube-search>=2.1,<3.0",
  "youtube-transcript-api>=1.2,<2.0",
  "pypdf>=6.0,<7.0",
  "openpyxl>=3.1,<4.0",
  "xlrd>=2.0,<3.0",
]

[project.scripts]
row-bot = "row_bot.launcher:main"

[dependency-groups]
test = [
  "pytest>=8.4,<9.0",
  "pytest-cov>=6.0,<8.0",
]
lint = [
  "ruff>=0.12,<1.0",
]
dev = [
  "build>=1.3,<2.0",
  "pytest>=8.4,<9.0",
  "ruff>=0.12,<1.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "row_bot.version.__version__" }

[tool.uv]
required-version = ">=0.7"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
